kubernetes/deployv1.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskv1-deployment
  labels:
    app: flaskv1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskv1
  template:
    metadata:
      labels:
        app: flaskv1
    spec:
      containers:
      - name: flaskv1
        image: stefannmih/flaskv1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flaskv1-service
spec:
  selector:
    app: flaskv1
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5000
  type: LoadBalancer
