kubernetes/deployv3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskv3-deployment
  labels:
    app: flaskv3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskv3
  template:
    metadata:
      labels:
        app: flaskv3
    spec:
      containers:
      - name: flaskv3
        image: stefannmih/flaskv3
        ports:
        - containerPort: 5000
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: flaskv3-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: flaskv3
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5000
  type: LoadBalancer
